--- a/controllers/features/_list_toolbar.htm
+++ b/controllers/features/_list_toolbar.htm
@@ -1,5 +1,5 @@
 <div data-control="toolbar">
-    <a href="<?= Backend::url('mavitm/estate/features/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+    <a href="<?= Backend::url('awebsome/realestate/features/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
     <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
@@ -16,8 +16,8 @@
         <?= e(trans('backend::lang.list.delete_selected')) ?>
     </button>
 
-    <a href="<?= Backend::url('mavitm/estate/features/reorder') ?>"
+    <a href="<?= Backend::url('awebsome/realestate/features/reorder') ?>"
        class="btn btn-default oc-icon-sitemap">
-        <?= e(trans('mavitm.estate::lang.features.reorder')) ?>
+        <?= e(trans('awebsome.realestate::lang.features.reorder')) ?>
     </a>
 </div>
