--- a/controllers/messages/create.htm
+++ b/controllers/messages/create.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('mavitm/estate/messages') ?>"><?= e(trans('mavitm.estate::lang.plugin.messages'))?></a></li>
+        <li><a href="<?= Backend::url('awebsome/realestate/messages') ?>"><?= e(trans('awebsome.realestate::lang.plugin.messages'))?></a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -33,7 +33,7 @@
                     <?= e(trans('backend::lang.form.save_and_close')) ?>
                 </button>
                 <span class="btn-text">
-                    <a href="<?= Backend::url('mavitm/estate/messages') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
+                    <a href="<?= Backend::url('awebsome/realestate/messages') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
                 </span>
             </div>
         </div>
@@ -43,6 +43,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('mavitm/estate/messages') ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
+    <p><a href="<?= Backend::url('awebsome/realestate/messages') ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
 
 <?php endif ?>
