--- a/models/message/_realty.htm
+++ b/models/message/_realty.htm
@@ -1,3 +1,3 @@
-<a href="<?= \Backend\Facades\Backend::url('mavitm/estate/realties/preview/' . $value) ?>" class="btn btn-primary btn-sm">
-    <?= Lang::get('mavitm.estate::lang.realty.name') . " #$value" ?>
+<a href="<?= \Backend\Facades\Backend::url('awebsome/realestate/realties/preview/' . $value) ?>" class="btn btn-primary btn-sm">
+    <?= Lang::get('awebsome.realestate::lang.realty.name') . " #$value" ?>
 </a>
