--- a/controllers/realties/create.htm
+++ b/controllers/realties/create.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('awebsome/realestate/realties') ?>"><?= Backend::url('awebsome/realestate/messages') ?>"><?= e(trans('awebsome.realestate::lang.realty.name'))?></a></li>
+        <li><a href="<?= Backend::url('awebsome/realestate/realties') ?>"><?= e(trans('awebsome.realestate::lang.realty.name'))?></a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
